2001-07-09 Kevin Vandersloot <kfv101@psu.edu>

	Beginning to move e-tree specs to different file. Thanks to 
	Carlos Perello Marin <carlos@gnome-db.org> for
	providing the initial patch.

	*interface.c (create_main_window): more cosmetic changes.

	*Makefile.am: add proctable.etspec. Beginning of attempt
	to move the spec into a different file for 
	internationalization purposes.

	*proctable.c: put in if statement to open spec from a 
	different file. Seems to crash and burn when I try though.
	Change justification to center for most of the items.

2001-07-09 Kevin Vandersloot <kfv101@psu.edu>

	*interface.c (create_main_window): change signal for info
	button to clicked instead of pressed so it works using the 
	keyboard. 
	Also make the More Info and Less Info labels saner
	and make sure if the info is already shown at startup set the
	label to Less Info.
	Some cosmetic inprovements to the progress meters.

2001-07-08 Kevin Vandersloot <kfv101@psu.edu>

	*proctable.c: add process status column

	*procman.c: change default to show tree_view

2001-07-08 Kevin Vandersloot <kfv101@psu.edu>

	*proctable.c (inset_info_to_tree): comment out the call
	to not expand the parent node. I think this might be
	causing a crash. Also add the term (thread) to any thread
	processes.

	*interface.c(create_main_window), infoview.c: instead of 
	setting certain widgets insensitive at startup, just send 
	an "unselect" signal.

	*interface.c: add menu items for renice and memory maps.

	*memmaps.c: changed cmd_label to command_label since I used
	the same variable in the infoview.

	*memmaps.c (create_memmaps_dialog): check to see if dialog
	already exists. Don't show two dialogs.

2001-07-07 Kevin Vandersloot <kfv101@psu.edu>

	*infoview.c (infoview_create): much improved info viewer

	*procman.h: removed infoview structure. Now the widgets are
	accessed as global variables deffined in infoview.c

	*procman.h: added new configuration variable to show the tree. 