@@ -25,7 +25,8 @@ procman_LDADD = $(GNOME_LIBDIR) $(GNOMEUI_LIBS) \
 
 specdir = $(datadir)/procman
 spec_DATA = \
-	proctable.etspec
+	proctable.etspec \
+	memmaps.etspec
 
 EXTRA_DIST = \
 	$(spec_DATA)
