@@ -1,3 +1,10 @@
+2001-07-10 Kevin Vandersloot <kfv101@psu.edu>
+
+	*memmaps.c: put in same conditionals to load memmaps.etspec.
+	It seems a bug in gal is causeing the crashes.
+
+	*Makefile.am: add memmaps.etspec.
+
 2001-07-09 Kevin Vandersloot <kfv101@psu.edu>
 
 	Beginning to move e-tree specs to different file. Thanks to 
